organize integration tests as separate source set